# tg-reader-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.en.md  README.md  README.zh.md  SECURITY.md  http_server.py  pyproject.toml  server.py
docs/: cookbook.md
