[project]
name = "tg-reader-mcp"
version = "1.0.0"
description = "Telegram Reader MCP Server (只读)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "telethon>=1.34.0",
]

[project.scripts]
tg-reader-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
